#91 metronome button too small #90 fixing back button for songs & events after router.push

--- a/public/global2.css
+++ b/public/global2.css
@@ -2205,6 +2205,7 @@ table.songMetadata tr:hover td .CMSmallButton {
 }
 
 .GlobalMetronomeDialog .tapTempoButton,
+.GlobalMetronomeDialog .closeButton,
 .GlobalMetronomeDialog .sliderContainer .nudge {
     margin: 15px;
     border-radius: 8px;
@@ -2222,7 +2223,13 @@ table.songMetadata tr:hover td .CMSmallButton {
 }
 
 .GlobalMetronomeDialog .tapTempoButton {
+    /* because caption changes, fix the width. */
     width: 150px;
+}
+
+.GlobalMetronomeDialog .closeButton {
+    width: min-content;
+    padding: 20px;
 }
 
 .GlobalMetronomeDialog .sliderContainer .nudge {
